force-app/main/default/objects/Informe_avance__c/Informe_avance__c.object-meta.xml
<CustomObject>
    <label>Informe avance</label>
    <nameField>
        <label>Nombre de Informe avance</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Informe avances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>