force-app/main/default/objects/Informe_avance__c/fields/Avance__c.field-meta.xml
<CustomField>
    <fullName>Avance__c</fullName>
    <label>Avance</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>