force-app/main/default/objects/Informe_avance__c/fields/Fotos__c.field-meta.xml
<CustomField>
    <fullName>Fotos__c</fullName>
    <label>Fotos</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>