force-app/main/default/objects/Informe_avance__c/fields/Obra__c.field-meta.xml
<CustomField>
    <fullName>Obra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Obra</label>
    <referenceTo>Obra__c</referenceTo>
    <relationshipLabel>Informe avances</relationshipLabel>
    <relationshipName>Informe_avances</relationshipName>
    <type>Lookup</type>
</CustomField>