force-app/main/default/objects/Informe_avance__c/fields/Trabajos_programados__c.field-meta.xml
<CustomField>
    <fullName>Trabajos_programados__c</fullName>
    <label>Trabajos programados</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>